RESOLVED FIXED274761
REGRESSION(278860@main): [GLib] Cannot build with GPUProcess enabled
https://bugs.webkit.org/show_bug.cgi?id=274761
Summary REGRESSION(278860@main): [GLib] Cannot build with GPUProcess enabled
Adrian Perez
Reported 2024-05-27 14:51:54 PDT
Compilation fails with: /home/aperez/devel/WebKit/Source/WebKit/GPUProcess/GPUConnectionToWebProcess.cpp:156:10: fatal error: WebCore/CoreAudioSharedUnit.h: No such file or directory | 156 | #include <WebCore/CoreAudioSharedUnit.h> | | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Attachments
Adrian Perez
Comment 1 2024-05-27 14:53:15 PDT
There is a missing PLATFORM(MAC) guard, issue introduced in 278860@main
Adrian Perez
Comment 2 2024-05-27 15:02:29 PDT
EWS
Comment 3 2024-05-27 17:05:04 PDT
Committed 279360@main (928129715480): <https://commits.webkit.org/279360@main> Reviewed commits have been landed. Closing PR #29158 and removing active labels.
Radar WebKit Bug Importer
Comment 4 2024-05-27 17:06:15 PDT
Note You need to log in before you can comment on or make changes to this bug.