REGRESSION(278860@main): [GLib] Fix the build with GPUProcess enabled https://bugs.webkit.org/show_bug.cgi?id=274761

Reviewed by Michael Catanzaro.

* Source/WebKit/GPUProcess/GPUConnectionToWebProcess.cpp: Add missing
PLATFORM(MAC) guard around the inclusion of WebCore/CoreAudioSharedUnit.h

Canonical link: https://commits.webkit.org/279360@main